force-app/main/default/objects/Pricing_Discount_Tier__c/Pricing_Discount_Tier__c.object-meta.xml
<CustomObject>
    <description>Object to check for Discount Tier records</description>
    <label>Pricing Discount Tier</label>
    <nameField>
        <displayFormat>PDT-{00000000}</displayFormat>
        <label>Pricing Discount Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Discount Tiers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>