force-app/main/default/objects/Pricing_Discount_Tier__c/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <description>Field contains Maximum Discount value</description>
    <inlineHelpText>Maximum value of the tier range</inlineHelpText>
    <label>Maximum Value</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>