force-app/main/default/objects/Pricing_Discount_Tier__c/fields/UG_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>UG_Discount_Type__c</fullName>
    <description>Type for Discount Tier</description>
    <inlineHelpText>Type of Discount for the Program</inlineHelpText>
    <label>UG Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier_Discount_Type</valueSetName>
    </valueSet>
</CustomField>