force-app/main/default/objects/Pricing_Discount_Tier__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Date Time field containing the discount validity from date/time</description>
    <inlineHelpText>Validity start date of the Program and Discount</inlineHelpText>
    <label>Valid From</label>
    <type>DateTime</type>
</CustomField>