force-app/main/default/objects/Pricing_Discount_Tier__c/recordTypes/Open_Offer.recordType-meta.xml
<RecordType>
    <fullName>Open_Offer</fullName>
    <active>true</active>
    <description>Record Type is of Open Offer</description>
    <label>Open Offer</label>
</RecordType>