force-app/main/default/objects/Pricing_Discount_Tier__c/validationRules/RestrictCreateEditAccess.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCreateEditAccess</fullName>
    <active>true</active>
    <description>To Restrict Create/Edit Access for Users who do not have the SL_Edit Pricing Discount Tier permission set</description>
    <errorConditionFormula>AND(NOT( $Permission.SL_Edit_Pricing_Discount_Tier ),NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c))</errorConditionFormula>
    <errorMessage>You are not authorized to edit this record.</errorMessage>
</ValidationRule>